Avoid dimming the chevron of collapsed rows

--- a/webview/src/experiments/components/table/styles.module.scss
+++ b/webview/src/experiments/components/table/styles.module.scss
@@ -41,7 +41,7 @@ $spinner-color-light: #000;
   left: 0;
   display: inline-block;
   position: absolute;
-  border: 2px solid $toggle-color;
+  border: 2px solid $fg-color;
   border-top: unset;
   border-left: unset;
   transition: transform 0.2s, right 0.2s, bottom 0.2s;
